# CSCE635

./: .gitignore  gpsConversionTool.xlsx
arduino/emilyControl/: emilyControl.cpp
arduino/emilyGPS_set_settings/: emilyGPS_set_settings.ino
arduino/emily_driver/: ESP.h  emily_driver.ino
arduino/emily_gps_checksum/: emily_gps_checksum.ino
arduino/emily_gps_driver/: emily_gps_driver.ino
arduino/emily_servo_driver/: emily_servo_driver.ino
cpp/: CMakeLists.txt
cpp/msgParser/: msgParser.h
cpp/nanomsg_lib/: msgParser.h  msgParserTest.cpp
cpp/nanomsg_test/: nanomsg_test.sln
cpp/nanomsg_test/nanomsg_test/: main.cpp
cpp/nanomsg_test/src/: main.cpp
cpp/pfield_realtime/: pfield_realtime.cpp  pfields_realtime.sln
cpp/pfields/: main.cpp  pfields.cpp  pfields.h
cpp/testFunctions/: esp_test.cpp  pid_test.cpp
eagle/emilyCircuit/: emilyBoard.brd  emilyBoard.sch
eagle/pixEmilyPdb/: pixEmilyPdb.brd  pixEmilyPdb.sch
matlab/: controlEvaluate.m  dataLogRead.asv  dataLogRead.m  headingDiff.m  loadData.m  minAngleErr.m  parseForPidTuning.m  pi2pi.m
matlab/sysid/: fsolfun.m  sysid2.m
python/: README.md
python/EPS/: curses_test.py
python/ESP/: esp.py  esp_python.py  espmodule.cpp  serial_control_test.py  serial_test.py  serial_test_debugging.py
python/dataParse/: acceptGps.m  filter.py  filter2.py  fsolfun.m  parseLogsForEmpty.py  parser.py  sysid.asv  sysid.m  sysid2.m
python/emilyEmulator/: emilyEcho.py  emulator.py
python/joystick/: Joystick_input.py  serial_joystick.py
python/keyboard_thread/: keyboard_thread.py
python/nanomsg_test/: server.py
(+31 files in other folders)
